added all endpoint stubs
